--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@fastify/cookie": "^9.4.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
+    "@fastify/multipart": "^6.0.1",
+    "@fastify/static": "^7.0.4",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.1.0",
     "@prisma/client": "^5.18.0",
+    "ajv": "^8.17.1",
     "fastify": "^4.28.1",
     "fastify-zod": "^1.4.0",
     "pino": "^9.3.2",
